@@ -429,6 +429,7 @@ class MeetingGroup(BaseContent, BrowserDefaultMixin):
         # clean cache for vocabularies using MeetingGroups
         invalidate_cachekey_volatile_for("Products.PloneMeeting.vocabularies.proposinggroupsvocabulary")
         invalidate_cachekey_volatile_for("Products.PloneMeeting.vocabularies.proposinggroupacronymsvocabulary")
+        invalidate_cachekey_volatile_for("Products.PloneMeeting.vocabularies.groupsinchargevocabulary")
         invalidate_cachekey_volatile_for("Products.PloneMeeting.vocabularies.askedadvicesvocabulary")
         self.adapted().onEdit(isCreated=True)  # Call product-specific code
 
@@ -439,6 +440,7 @@ class MeetingGroup(BaseContent, BrowserDefaultMixin):
         # clean cache for vocabularies using MeetingGroups
         invalidate_cachekey_volatile_for("Products.PloneMeeting.vocabularies.proposinggroupsvocabulary")
         invalidate_cachekey_volatile_for("Products.PloneMeeting.vocabularies.proposinggroupacronymsvocabulary")
+        invalidate_cachekey_volatile_for("Products.PloneMeeting.vocabularies.groupsinchargevocabulary")
         invalidate_cachekey_volatile_for("Products.PloneMeeting.vocabularies.askedadvicesvocabulary")
         self.adapted().onEdit(isCreated=False)
 
