@@ -320,7 +320,8 @@ Older versions than 3.0 can be found at http://svn.communesplone.org/svn/commune
 - Added field MeetingGroup.groupInCharge to be able to define a group in charge of another.  It keeps history of groupInCharge so
   it is possible to know who was in charge 2 years ago and to print relevant informations on a document for example.
   Added also 'on_groups_in_charge' item insertion method into a meeting (MeetingConfig.insertingMethodsOnAddItem) and added possibilty
-  to define item states in which subgroup 'observers' of the group in charge will have access
+  to define item states in which subgroup 'observers' of the group in charge will have access.
+  A column with groupInCharge and groupInCharge acronym and a faceted filter may be enbabled in dashboards
 - Added optional fields Meeting.assemblyGuest, Meeting.assemblyProxies and Meeting.assemblyStaves on the meeting to use if necessary.
   Meeting.assemblyXXX fields are now displayed one under the other on the meeting_view and it is hidden using a collapsible widget.
   A default value for Meeting.assemblyStaves may be defined in the MeetingConfig.assemblyStaves attribute
@@ -384,6 +385,7 @@ Older versions than 3.0 can be found at http://svn.communesplone.org/svn/commune
   Nevertheless it is still possible to use the 'use_mltAssembly=True' parameter to get the old behavior
 - Added parameter 'withWeekDayName' to ToolPloneMeeting.formatMeetingDate that will display the weekday name before the date,
   like 'Tuesday 05 may 2015'
+- A MeetingGroup may not be removed if it is used as groupInCharge of another
 
 3.3 (2015-02-27)
 ----------------
